--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nodemon": "3.0.1",
     "sequelize": "6.32.1",
     "sqlite3": "5.1.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "mysql2": "3.7.0",
+    "dotenv": "16.4.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "1.4.3",
