--- a/.github/workflows/scandockerimagesdockerhub.yaml
+++ b/.github/workflows/scandockerimagesdockerhub.yaml
@@ -49,9 +49,8 @@ jobs:
         id: trivy_output
         run: |
           ls -lh
-          cat trivy-report.json
-          RESULT=$(cat trivy-report.json)
-          echo "value=$RESULT" >> $GITHUB_OUTPUT
+          REPORT=$(cat trivy-report.json)
+          echo "value=$REPORT" >> $GITHUB_OUTPUT
           echo $GITHUB_OUTPUT
 
       # - name: Microsoft Teams Notification
