--- a/.github/workflows/scandockerimagesdockerhub.yaml
+++ b/.github/workflows/scandockerimagesdockerhub.yaml
@@ -50,9 +50,9 @@ jobs:
         run: |
           ls -lh
           REPORT=$(cat trivy-report.json)
-          echo "Hello World!"
-          echo $REPORT
-          echo "value=$REPORT" >> $GITHUB_OUTPUT
+          echo "trivy<<EOF" >> $GITHUB_OUTPUT
+          echo "$REPORT" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
           echo $GITHUB_OUTPUT
 
       # - name: Microsoft Teams Notification
