added docker file

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,7 +9,7 @@ jobs:
   build_image_backend:
     uses: chukwukelu2023/automation-hub/.github/workflows/image_build_ghcr.yaml@main
     with:
-      context-path: ./Backend
+      context-path: .
       tag-name: ghcr.io/chukwukelu2023/taskmanager-app:${{ github.run_number }}
     secrets:
        GHCR_PAT: ${{ secrets.GHCR_PAT }}
