--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
@@ -22,6 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
+    "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
     "typescript": "^5.1.6"
