added compute shere actions

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,4 +36,4 @@ jobs:
         uses: computesphere/build-and-deploy-image-action.yaml@v1
         with:
           mode: build-only
-          name: ${{ vars.IMAGE }}
+          name: ${{ env.IMAGE }}
