add computshere build

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,20 +1,20 @@
-name: Build and Deploy Docker Image
+# name: Build and Deploy Docker Image
 
-on:
-  push:
-    branches:
-      - development
-      - main
-jobs:
-  build_and_push:
-    uses: chukwukelu2023/automation-hub/.github/workflows/image_build_dockerhub.yaml@main
-    with:
-      context-path: .
-      tag-name: oluchioraekwe/taskmanager-app-dev:v.${{ github.run_number }}
-      registry_name: docker.io
-    secrets:
-       REGISTRY_PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-       REGISTRY_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+# on:
+#   push:
+#     branches:
+#       - development
+#       - main
+# jobs:
+#   build_and_push:
+#     uses: chukwukelu2023/automation-hub/.github/workflows/image_build_dockerhub.yaml@main
+#     with:
+#       context-path: .
+#       tag-name: oluchioraekwe/taskmanager-app-dev:v.${{ github.run_number }}
+#       registry_name: docker.io
+#     secrets:
+#        REGISTRY_PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+#        REGISTRY_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
 # name: Computeshere Build
 
@@ -38,3 +38,34 @@ jobs:
 #         with:
 #           mode: build-only  
 #           name: oluchioraekwe/taskmanager-app-dev:v.0.1
+
+
+name: Build and Deploy Dev
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - develop
+
+jobs:
+  build-and-deploy-image:
+    name: Build and Deploy
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build and Deploy Image to ComputeSphere
+        id: deploy-image
+        uses: computesphere/build-and-deploy-image-action@v1
+        with:
+          mode: build-and-deploy
+          name: docker.io/oluchioraekwe/taskmanager-app-dev:v.21
+          account_id: 9ff02ad0-0cbf-4403-91e2-56b511841c75
+          token: hQrn0raZfRt8LzuZIgG6dMQ8AUXrWeRQ
+          deployment_id: 66c87e0e-9878-4c6a-aecb-11d31860dc15
+          registry: docker.io
+          # type: private
+          # username: ${{ vars.REGISTRY_USERNAME }}
+          # password: ${{ vars.REGISTRY_PASSWORD }}
+
