--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -85,6 +85,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Run CLI
+      run: ls -lh
+
     # - name: Set up Node.js
     #   uses: actions/setup-node@v3
     #   with:
