--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -108,13 +108,14 @@ jobs:
         source: "./"
         target: "/home/adminuser/backend"
 
-    # - name: SSH into EC2 and move files
-    #   uses: appleboy/ssh-action@v0.1.10
-    #   with:
-    #     host: ${{ secrets.EC2_HOST }}
-    #     username: ${{ secrets.EC2_USER }}
-    #     password: ${{ secrets.EC2_PASSWORD }}
-    #     script: |
-    #       sudo rm -rf /var/www/html/*
-    #       sudo cp -r /tmp/react-app/* /var/www/html/
-    #       sudo systemctl restart nginx
+    - name: SSH into EC2 and move files
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        password: ${{ secrets.EC2_PASSWORD }}
+        script: |
+          sudo /home/adminuser/backend
+          sudo npm install
+          sudo npm run build
+          sudo npm start
