--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -115,7 +115,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         password: ${{ secrets.EC2_PASSWORD }}
         script: |
-          sudo cd /home/adminuser/backend
-           npm install
-           npm run build
-           npm start
+          cd /home/adminuser/backend
+          npm install
+          npm run build
+          npm start
