added pm2 command

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -107,4 +107,5 @@ jobs:
           cd /home/adminuser/backend
           npm install
           npm run build
+          pm2 restart taskmanager
           
