--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -16,28 +16,26 @@
 #        REGISTRY_PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 #        REGISTRY_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
-# name: Computeshere Build
+name: Computeshere Build
 
-# on:
-#   push:
-#     branches:
-#       - development
-#       - main
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - development
+      - main
 
-# jobs:
-#   build-and-deploy-image:
-#     name: Build and Deploy
-#     runs-on: ubuntu-latest
-#     environment: dev
-#     steps:
-#       - uses: actions/checkout@v4
-
-#       - name: Build Image
-#         id: Build
-#         uses: computesphere/build-and-deploy-image-action@v1
-#         with:
-#           mode: build-only  
-#           name: oluchioraekwe/taskmanager-app-dev:v.0.1
+jobs:
+  build-image:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Image
+        uses: computesphere/build-and-deploy-image-action@v1
+        with:
+          mode: build-only  
+          name: oluchioraekwe/taskmanager-app-dev:v.0.1
 
 
 # name: Build and Deploy Dev
@@ -69,43 +67,43 @@
 #           username: ${{ secrets.DOCKER_HUB_USERNAME }}
 #           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-name: Build and Deploy Node to EC2
+# name: Build and Deploy Node to EC2
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - development
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches:
+#       - development
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+#     steps:
+#     - name: Checkout Code
+#       uses: actions/checkout@v3
 
-    - name: Run CLI
-      run: ls -lh
+#     - name: Run CLI
+#       run: ls -lh
 
-    - name: Deploy to EC2 via SSH
-      uses: appleboy/scp-action@v0.1.7
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        password: ${{ secrets.EC2_PASSWORD }}
-        source: "./"
-        target: "/home/adminuser/backend"
+#     - name: Deploy to EC2 via SSH
+#       uses: appleboy/scp-action@v0.1.7
+#       with:
+#         host: ${{ secrets.EC2_HOST }}
+#         username: ${{ secrets.EC2_USER }}
+#         password: ${{ secrets.EC2_PASSWORD }}
+#         source: "./"
+#         target: "/home/adminuser/backend"
 
-    - name: SSH into EC2 and move files
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        password: ${{ secrets.EC2_PASSWORD }}
-        script: |
-          cd /home/adminuser/backend
-          npm install
-          npm run build
-          pm2 restart taskmanager
+#     - name: SSH into EC2 and move files
+#       uses: appleboy/ssh-action@v0.1.10
+#       with:
+#         host: ${{ secrets.EC2_HOST }}
+#         username: ${{ secrets.EC2_USER }}
+#         password: ${{ secrets.EC2_PASSWORD }}
+#         script: |
+#           cd /home/adminuser/backend
+#           npm install
+#           npm run build
+#           pm2 restart taskmanager
           
