--- a/.github/workflows/build-task.yaml
+++ b/.github/workflows/build-task.yaml
@@ -1,6 +1,7 @@
 name: NodeJS TypeScript Build
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
@@ -17,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
