--- a/.github/workflows/build-task.yaml
+++ b/.github/workflows/build-task.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ${{ vars.USE_SELF_HOSTED == 'true' && 'self-hosted' || 'ubuntu-latest' }}
 
     steps:
       - name: Checkout code
